# SudoCraft

./: .gitignore  .replit  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  AUTHORS  CMakeCache.txt  CMakeLists.txt  CNAME  ChangeLog  Ex  Makefile.am  Makefile.in  README.md  SECURITY.md  Sudocraft.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cd  cmake_install.cmake  compile_commands.json  config.h.in  configure  configure.ac  index.md  stuff  sudocraft.vcxproj  sudocraft.vcxproj.filters
.github/workflows/: c-cpp.yml  cmake-linux-latest.yml  cmake-windows-latest.yml  codeql-analysis.yml  makefile.yml
CompiledCode/: Game
Debug/: sudocraft.ilk
autom4te.cache/: output.0  output.1  output.4  requests  traces.0  traces.1  traces.2
include/: Blocks.h  Character.h  Craft.h  GameUI.h  Inventory.h  Item.h  ItemLists.h  SafeData.hpp  SaveIO.h  SudocraftConfig.h.in  Tool.h  Utils.h  Weapon.h  World.cpp  World.h  WorldGen.h
lib/: MagnumGlfwApplication-d.lib  MagnumShaders-d.lib  NoiseTool.exp  NoiseTool.lib  corrade-rc.exp  corrade-rc.lib  glfw3.lib
source/: .Craft.cpp.swm  .Craft.cpp.swn  .Craft.cpp.swo  .Game.cpp.swo  .Inventory.cpp.swm  .Inventory.cpp.swn  .Inventory.cpp.swo  .Inventory.h.swm  .Inventory.h.swn  .Inventory.h.swo  .Inventory.swp  .ItemLists.h.swp  Character.cpp  Character.h  Craft.cpp  Craft.h  Game  Game.cpp  Inventory.h  InventoryExample.txt  Item.h  Tool.cpp  Tool.h  Weapon.h
src/: Blocks.cpp  Character.cpp  Craft.cpp  Game.cpp  GameUI.cpp  Inventory.cpp  Item.cpp  SaveIO.cpp  Tool.cpp  Utils.cpp  Weapon.cpp  World.cpp  WorldGen.cpp  World_Gen.cpp
sudocraft.dir/Debug/: Character.nativecodeanalysis.sarif  Item.nativecodeanalysis.sarif  Tool.nativecodeanalysis.sarif  sudocraft.exe.recipe
sudocraft.dir/Debug/sudocraft.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
test/: CMakeCache.txt
x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog
x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
