bin_PROGRAMS = sudocraft
include_HEADERS = $(top_srcdir)/include/*
sudocraft_CPPFLAGS = "-I$(top_srcdir)/include" "-I$(top_srcdir)/deps/libnoise/include/noise" "-std=c++17"
sudocraft_SOURCES = src/Game.cpp src/Inventory.cpp src/Character.cpp src/Craft.cpp src/Item.cpp src/Weapon.cpp src/Tool.cpp
dist_doc_DATA = README.md
